<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="android.prabhav.com.prolificlibrary.Activities.UpdateBookActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar_updateBookActivity"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/off_white">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/library" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_book"
                android:textSize="18dp" />

            <Button
                android:id="@+id/back_button_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="5dp"
                android:background="@color/light_blue"
                android:gravity="center"
                android:text="@string/back_button"
                android:textColor="@color/grey"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!-- Since scroll view can only hold 1 child, this Linear Layout is used. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/book_title_editText_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="35dp"
                    android:background="@color/light_blue"
                    android:hint="@string/book_title"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/author_editText_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/light_blue"
                    android:hint="@string/author"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/publisher_editText_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/light_blue"
                    android:hint="@string/publisher"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/categories_editText_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/light_blue"
                    android:hint="@string/categories"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColorHint="@android:color/darker_gray" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/cancel_button_updateBookActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="25dp"
                        android:background="@color/light_blue"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/cancel_button"
                        android:textColor="@color/grey"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/add_button_updateBookActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="25dp"
                        android:background="@color/light_blue"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/update_button"
                        android:textColor="@color/grey"
                        android:textStyle="bold" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:text="@string/disclaimer" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_bar_update_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />


</FrameLayout>