<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="android.prabhav.com.AddBookActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar_addBookActivity"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/light_blue">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/library" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_book"
                android:textSize="18dp"
                android:textColor="@color/blue"/>

            <ImageButton
                android:id="@+id/done_button_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_done"
                android:layout_marginLeft="150dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/blue"/>

        </android.support.v7.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!-- Since scroll view can only hold 1 child, this Linear Layout is used. -->




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fl_booktitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/book_title_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="35dp"
                        android:background="@color/ultra_light"
                        android:hint="@string/book_title"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:textColorHint="@android:color/darker_gray" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fl_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/author_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/ultra_light"
                        android:hint="@string/author"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:textColorHint="@android:color/darker_gray" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fl_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/publisher_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/ultra_light"
                        android:hint="@string/publisher"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:textColorHint="@android:color/darker_gray" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fl_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/categories_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/ultra_light"
                        android:hint="@string/categories"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:textColorHint="@android:color/darker_gray" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/cancel_button_addBookActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="25dp"
                        android:background="@color/blue"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/cancel_button"
                        android:textColor="@color/grey"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/add_button_addBookActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="25dp"
                        android:background="@color/blue"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/add_button"
                        android:textColor="@color/grey"
                        android:textStyle="bold" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:text="@string/disclaimer" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_bar_add_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />


</FrameLayout>